--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
   align-items: center;
   background: #f1f1f1;
   padding: 20px;
-  width: 100vh;
+  width: 100vw;
 }
 
 .chat-container {
@@ -36,7 +36,18 @@
   font-size: 14px;
 }
 
-.chat-bubble {
+.chat-bubble-you {
+  background: #9ccaff;
+  color: #003366;
+  padding: 10px 14px;
+  border-radius: 12px;
+  max-width: 80%;
+  width: fit-content;
+  font-size: 15px;
+  margin-left: auto;
+}
+
+.chat-bubble-sender {
   background: #e3f0ff;
   color: #003366;
   padding: 10px 14px;
